--- a/Index.html
+++ b/Index.html
@@ -20,8 +20,8 @@
 
                 </ul>
             </nav> -->
-         <h5><span>THIS IS </SPan>
-            <h2>Sourav Ahmed</h2>
+         <h5>THIS IS </h5>
+            <h2><span>Sourav Ahmed</span></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quidem autem impedit, commodi consequuntur at nemo eligendi debitis molestiae veniam, ipsum vitae odit explicabo exercitationem animi quod mollitia optio earum id qui tenetur. Nostrum laboriosam excepturi fugiat commodi illo fuga ut ratione a eum quidem mollitia sed, minima obcaecati velit.</p>
 
 <div class="formcontainer">
@@ -29,7 +29,7 @@
                     <div class="form-left">
                         <label for="city">Enter your comment</label>
                         <input type="text" name="city" id="city">
-                        <p>example</p>
+                        <p>example: Get fucked</p>
                     </div>
                 <input type="button" value="Find Food Now">
             </form>
